--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
 
   <body>
     <header>
-      <h1>Hello</h1>
+      <div class="left">
+        <h1>Fake Header</h1>
+      </div>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
     </header>
+    <main>
+      <div class="paragraphs">
+        <div class="first-p">
+          <h2>Paragraph 1</h2>
+          <p>Fake text underneath header. Fake text underneath header. Fake text underneath header. Fake text underneath header. Fake text underneath header. Fake text underneath header.</p>
+        </div>
+        <div class="second-p">
+          <h2>Paragraph 2</h2>
+          <p>Fake text underneath header. Fake text underneath header. Fake text underneath header. Fake text underneath header. Fake text underneath header. Fake text underneath header.</p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
