--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
           <p>Fake text underneath header. Fake text underneath header. Fake text underneath header. Fake text underneath header. Fake text underneath header. Fake text underneath header.</p>
         </div>
       </div>
+      <div class="image">
+        <div class="background">
+          <img src="img/pro-pic.jpg" alt="Picture of me" />
+        </div>
+      </div>
     </main>
   </body>
 </html>
