added some javascript to my website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/style.css" />
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
+    <script src="index.js" defer></script>
   </head>
 
   <body>
@@ -32,9 +33,21 @@
           <p>Fake text underneath header. Fake text underneath header. Fake text underneath header. Fake text underneath header. Fake text underneath header. Fake text underneath header.</p>
         </div>
       </div>
-      <div class="image">
-        <div class="background">
-          <img src="img/pro-pic.jpg" alt="Picture of me" />
+      <div class="me-section">
+        <h1>This is me</h1>
+        <div class="image">
+          <div class="background">
+            <img src="img/pro-pic.jpg" alt="Picture of me" />
+          </div>
+        </div>
+      </div>
+      <div class="input">
+        <div class="label">
+          <input id="typed-input" type="text" placeholder="Type something" />
+          <button class="btn">Show Input</button>
+        </div>
+        <div class="show-input">
+          <h2 class="user-input">User input</h2>
         </div>
       </div>
     </main>
