added a feature that removes the hide class to show the value when clicked

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <button class="btn">Show Input</button>
         </div>
         <div class="show-input">
-          <h2 class="user-input">User input</h2>
+          <h2 class="user-input hide">User input</h2>
         </div>
       </div>
     </main>
