--- a/index.html
+++ b/index.html
@@ -44,11 +44,17 @@
       <div class="input">
         <div class="label">
           <input id="typed-input" type="text" placeholder="Type something" />
-          <button class="btn">Show Input</button>
+          <button class="show-btn">Show Input</button>
+          <button class="hide-btn">Hide Input</button>
         </div>
         <div class="show-input">
           <h2 class="user-input hide">User input</h2>
         </div>
+      </div>
+      <div class="count">
+        <button class="add">Count + 1</button>
+        <button class="subtract">Count - 1</button>
+        <p class="count-value">Count:</p>
       </div>
     </main>
   </body>
